# rofimoji

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  changelog.md  extract_emojis.py  pyproject.toml  readme.md  requirements-dev.txt  rofimoji.py  setup.cfg  setup.py
.github/DISCUSSION_TEMPLATE/: font-problems.yml
.github/ISSUE_TEMPLATE/: config.yml  problems-with-displaying-emojis.md
.github/workflows/: checks.yaml  release.yaml
extractors/: BlockExtractor.py  BlockFactory.py  CharacterFactory.py  EmojiExtractor.py  MathCollectionExtractor.py  NerdExtractor.py  blockextractor.py  blockfactory.py  characterfactory.py  emojiextractor.py  extract_emojis.py  extract_maths_symbols.py  extract_scripts.py  extractor.py  main.py  mathcollectionextractor.py  nerdextractor.py  requirements.txt
picker/: Clipboarder.py  Rofimoji.py  Typer.py  abstractionhelper.py  clipboarder.py  paths.py  rofimoji.py  selector.py  typer.py
picker/data/: adlam.csv  aegean_numbers.csv  ahom.csv  alchemical_symbols.csv  alphabetic_presentation_forms.csv  anatolian_hieroglyphs.csv  ancient_greek_musical_notation.csv  ancient_greek_numbers.csv  ancient_symbols.csv  arabic-indic.csv  arabic.csv  arabic_extended-a.csv  arabic_mathematical_alphabetic_symbols.csv  arabic_presentation_forms-a.csv  arabic_presentation_forms-b.csv  arabic_supplement.csv  armenian.csv  arrows.csv  avestan.csv  balinese.csv  bamum.csv  bamum_supplement.csv  basic_latin.csv  bassa_vah.csv  batak.csv  bengali.csv  bhaiksuki.csv  block_elements.csv  bopomofo.csv  bopomofo_extended.csv  box_drawing.csv  brahmi.csv  braille_patterns.csv  buginese.csv  buhid.csv  byzantine_musical_symbols.csv  carian.csv  caucasian_albanian.csv  chakma.csv  cham.csv  (+255 more)
picker/docs/: rofimoji.1  rofimoji.1.md
src/: setup.py
src/extractors/: __main__.py  annotationextractor.py  blockextractor.py  blockfactory.py  characterfactory.py  cjkextractor.py  emojiextractor.py  extract_emojis.py  extract_scripts.py  extractor.py  fileiconsextractor.py  fontawesome6extractor.py  gitmojiextractor.py  htmlcharacterextractor.py  kaomojiextractor.py  main.py  materialsymbolsextractor.sh  mathcollectionextractor.py  nerdextractor.py  nerdfontextractor.py  requirements.txt  weathericonsextractor.py
src/picker/: __init__.py  __main__.py  abstractionhelper.py  action.py  argument_parsing.py  clipboarder.py  emoji_data.py  file_loader.py  frecent.py  input_event_codes.py  mode.py  models.py  paths.py  recent.py  rofimoji.py  selector.py  standalone.py  typer.py
src/picker/clipboarder/: clipboarder.py  noop.py  pbcopy.py  wl.py  xclip.py  xsel.py
src/picker/contrib/: grid-icons-only.rasi  grid.rasi
src/picker/data/: adlam.csv  aegean_numbers.csv  ahom.csv  alchemical_symbols.csv  ancient_greek_musical_notation.csv  ancient_greek_numbers.csv  arabic.csv  arabic_extended-a.csv  arabic_extended-b.csv  arabic_extended-c.csv  arabic_presentation_forms-a.csv  arabic_presentation_forms-b.csv  arrows.csv  balinese.csv  bengali.csv  beria_erfe.csv  block_elements.csv  bopomofo.csv  box_drawing.csv  brahmi.csv  braille.csv  byzantine_musical_symbols.csv  carian.csv  chakma.csv  cham.csv  cherokee.csv  chess_symbols.csv  chorasmian.csv  cjk_cantonese.csv  cjk_compatibility.csv  cjk_compatibility_forms.csv  cjk_compatibility_ideographs_supplement.csv  cjk_japanese_kun.csv  cjk_japanese_on.csv  cjk_korean.csv  cjk_mandarin.csv  cjk_strokes.csv  cjk_tang.csv  cjk_vietnamese.csv  combining_diacritical_marks.csv  (+204 more)
src/picker/data/additional/: emojis_smileys_emotion.csv
src/picker/data/annotations/: af.csv  am.csv  ar.csv  as.csv  ast.csv  az.csv  be.csv  bg.csv  bn.csv  br.csv  bs.csv  ca.csv  ccp.csv  ceb.csv  chr.csv  ckb.csv  cs.csv  cy.csv  da.csv  de.csv  doi.csv  el.csv  en.csv  es.csv  et.csv  eu.csv  fa.csv  fi.csv  fil.csv  fo.csv  fr.csv  ga.csv  gd.csv  gl.csv  gu.csv  ha.csv  he.csv  hi.csv  hr.csv  hu.csv  (+79 more)
src/picker/docs/: rofimoji.1  rofimoji.1.md
src/picker/selector/: bemenu.py  choose.py  dmenu.py  fuzzel.py  hyprlauncher.py  rofi.py  selector.py  tofi.py  wmenu.py  wofi.py
src/picker/typer/: cliclick.py  noop.py  typer.py  wl_ime_type.py  wtype.py  xdotool.py  ydotool.py
