[tool.poetry]
name = "rofimoji"
version = "6.3.2"
description = "Simple character picker using rofi"
authors = ["Fabian Winter <5821180+fdw@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fdw/rofimoji"
repository = "https://github.com/fdw/rofimoji"
packages =[
    { include = "picker", from = "src" }
]
include = [
    "src/picker/data/*.csv",
    "src/picker/docs/rofimoji.1",
    "src/picker/contrib/*"
]

[tool.poetry.scripts]
rofimoji = 'picker.__main__:main'

[tool.poetry.dependencies]
python = "^3.8"
ConfigArgParse = "^1.3"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
requests = "^2.32.3"
tqdm = "^4.66.4"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
