[tool.poetry]
name = "rofimoji"
version = "6.5.0"
description = "Simple character picker using rofi"
authors = ["Fabian Winter <5821180+fdw@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fdw/rofimoji"
repository = "https://github.com/fdw/rofimoji"
packages =[
    { include = "picker", from = "src" }
]
include = [
    "src/picker/data/*.csv",
    "src/picker/docs/rofimoji.1",
    "src/picker/contrib/*"
]

[tool.poetry.scripts]
rofimoji = 'picker.__main__:main'

[tool.poetry.dependencies]
python = "^3.9"
ConfigArgParse = "^1.3"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
tqdm = "^4.67.0"
black = "^24.10.0"
isort = "^5.13.2"
aiohttp = "^3.11.7"
aiofiles = "^24.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
