[project]
name = "rofimoji"
version = "6.5.0"
description = "Simple character picker using rofi"
authors = [
    { name = "Fabian Winter", email = "5821180+fdw@users.noreply.github.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ConfigArgParse>=1.3,<2.0",
]

[project.urls]
Homepage = "https://github.com/fdw/rofimoji"
Repository = "https://github.com/fdw/rofimoji"

[project.scripts]
rofimoji = "picker.__main__:main"

[tool.hatch.build]
include = [
    "src/picker/data/*.csv",
    "src/picker/docs/rofimoji.1",
    "src/picker/contrib/*",
]
packages = ['src/picker']

[dependency-groups]
dev = [
    "beautifulsoup4>=4.12.3,<5.0",
    "lxml>=5.3.0,<6.0",
    "tqdm>=4.67.0,<5.0",
    "aiohttp>=3.11.7,<4.0",
    "aiofiles>=24.1.0,<25.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
