[metadata]
# replace with your username:
name = rofimoji
version = attr: picker.rofimoji.__version__
author = fdw
author_email = 5821180+fdw@users.noreply.github.com
description = Simple character picker using rofi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fdw/rofimoji
project_urls =
    Bug Tracker = https://github.com/fdw/rofimoji/issues
license: MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = picker
python_requires = >=3.7
install_requires =
    ConfigArgParse>0.15,<2.0.0

[options.package_data]
picker = data/*.csv

[options.data_files]
/share/man/man1 = src/picker/docs/rofimoji.1

[options.entry_points]
console_scripts =
    rofimoji = picker.rofimoji:main
